<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/dateOfInstall"
                android:id="@+id/textView"
                android:gravity="center_vertical|start|end"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:textColor="#FFFFFF" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editTextDateOfInstall"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:editable="false"
                android:focusable="false"
                android:gravity="center_horizontal"
                android:hint="@string/tapToEnterDate" />
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satisfactoryInstall"
            android:id="@+id/checkBoxSatisfactoryInstall"
            android:checked="false"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/comment"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSatisfactoryInstall"
            android:paddingBottom="15dp"
            android:paddingTop="0dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cablesConcealed"
            android:id="@+id/checkBoxCableConcealed"
            android:checked="false"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/comment"
            android:layout_height="wrap_content"
            android:id="@+id/editTextCableConcealed"
            android:paddingBottom="15dp"
            android:paddingTop="0dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cableBushingSealed"
            android:id="@+id/checkBoxCableBushingSealed"
            android:checked="false"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/comment"
            android:layout_height="wrap_content"
            android:id="@+id/editTextCableBushingSealed"
            android:paddingBottom="15dp"
            android:paddingTop="0dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cableTrace"
            android:id="@+id/checkBoxCableTrace"
            android:checked="false"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/comment"
            android:layout_height="wrap_content"
            android:id="@+id/editTextCableTrace"
            android:paddingBottom="15dp"
            android:paddingTop="0dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cleanedUp"
            android:id="@+id/checkBoxCleanUp"
            android:checked="false"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/comment"
            android:layout_height="wrap_content"
            android:id="@+id/editTextCleanUp"
            android:paddingBottom="15dp"
            android:paddingTop="0dp" />

    </LinearLayout>


</ScrollView>