<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#004841"
        android:gravity="center"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customerInfo"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="25dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/sex"
                    android:id="@+id/sex"
                    android:gravity="center_vertical|start|end"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sexText"
                    android:layout_toRightOf="@id/sex"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="40dp"
                android:padding="25dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/initials"
                    android:id="@+id/prefix"
                    android:gravity="center_vertical|start|end"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/prefixText"
                    android:layout_toRightOf="@id/prefix"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="80dp"
                android:padding="25dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/lastName"
                    android:id="@+id/lastname"
                    android:gravity="center_vertical|start|end"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastnameText"
                    android:layout_toRightOf="@id/lastname"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="120dp"
                android:padding="25dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/phone"
                    android:id="@+id/phone"
                    android:gravity="center_vertical|start|end"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/phoneText"
                    android:layout_toRightOf="@id/phone"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/header2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#004841"
                android:gravity="center"
                android:layout_marginTop="220dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="280dp"
                android:padding="25dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/street"
                    android:id="@+id/street"
                    android:gravity="center_vertical|start|end"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/streetText"
                    android:layout_toRightOf="@id/street"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="320dp"
                android:padding="25dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/streetNr"
                    android:id="@+id/housenumber"
                    android:gravity="center_vertical|start|end"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/housenumberText"
                    android:layout_toRightOf="@id/housenumber"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="360dp"
                android:padding="25dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/postalCode"
                    android:id="@+id/zipcode"
                    android:gravity="center_vertical|start|end"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/zipcodeText"
                    android:layout_toRightOf="@id/zipcode"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="400dp"
                android:padding="25dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/city"
                    android:id="@+id/city"
                    android:gravity="center_vertical|start|end"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cityText"
                    android:layout_toRightOf="@id/city"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="440dp"
                android:padding="25dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/email"
                    android:id="@+id/email"
                    android:gravity="center_vertical|start|end"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailText"
                    android:layout_toRightOf="@id/email"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>



        </RelativeLayout>

    </ScrollView>


</LinearLayout>